# cyberneticShell

./: .dockerignore  .env.example  .env.tauri.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/giga-command-center-core/: Cargo.toml
crates/giga-command-center-core/src/: agent_manager.rs  cli_builders.rs  lib.rs  types.rs
docs/: ARCHITECTURE_REVIEW.md  BUILD_CONFIGURATION.md  BUILD_QUICK_REFERENCE.md  BUN_MIGRATION.md  DOCKER.md  IMPROVEMENTS_SUMMARY.md  SRC_TAURI.md  SYSTEM_DESIGN.md
scripts/: build-docker.sh  dev.sh  run-docker.sh
src/: App.tsx  index.css  main.tsx
src-server/: Cargo.toml
src-server/src/: main.rs  routes.rs  websocket.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_manager.rs  commands.rs  lib.rs  main.rs  types.rs
src/canvas/: CanvasRoot.tsx
src/components/: OutputModal.tsx
src/components/common/: Badge.tsx  Button.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx
src/components/panels/: AgentDetail.tsx  LogViewer.tsx  SkillsPanel.tsx  TaskInput.tsx  WorkspaceList.tsx  WorkspacePanel.tsx
src/hooks/: useAgentCommands.ts  useAgentEvents.ts  useKeyboardShortcuts.ts  useTauriEvents.ts
src/stores/: agents.ts  skills.ts  ui.ts  workspaces.ts
src/types/: agent.ts  events.ts  skill.ts  workspace.ts
src/utils/: api.ts  colors.ts  emoji.ts  env.ts  sounds.ts
