[workspace]
members = [
    "src-tauri",
    "src-server",
    "crates/giga-command-center-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["you"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "process", "io-util", "macros"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
