[package]
name = "claude-command-center"
version = "0.1.0"
description = "Pixel-art visualization layer for Claude Code"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_command_center_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "process", "io-util", "macros"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
