[package]
name = "giga-command-center-tauri"
version = "0.1.0"
edition = "2021"
authors = ["you"]
description = "Tauri desktop application for agent CLI management"

[lib]
name = "giga_command_center_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
giga-command-center-core = { path = "../crates/giga-command-center-core" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
dirs = "5"
