[package]
name = "giga-command-center-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core library for agent CLI management"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
dirs = "5"
